# p2p-fileshare

./: .env.example  .gitignore  AGENTS.md  Caddyfile.example  README.md
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: README.md  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_stat_transfer.xml
android/app/src/main/res/values/: colors.xml  (+2 more)
docs/: android_build.md  client_compatibility.md  coturn.md  deployment_raspberry_pi.md  native_apps.md  protocol.md  security.md  windows_build.md
scripts/: verify.ps1  verify.sh
server/: requirements.txt
server/app/: activity.py  admin.py  cleanup.py  config.py  db.py  main.py  models.py  rate_limit.py  rooms.py  security.py  signaling.py  stored.py
server/app/static/: manifest.webmanifest  sw.js
server/app/static/css/: style.css
server/app/static/js/: common.js  receive.js  send.js  stored_receive.js  stored_send.js  webrtc_protocol.js
server/app/templates/: admin_logs.html  index.html  p2p_receive.html  p2p_send.html  receive.html  send.html
server/tests/: conftest.py  test_rooms.py  test_security.py  test_stored.py
systemd/: p2p-fileshare.service
web/: README.md
windows/: README.md  index.html  package-lock.json  package.json  vite.config.ts
windows/installer-launcher/: launcher.rs
windows/src/: main.ts  style.css  types.d.ts
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: lib.rs  main.rs
(+18 files in other folders)
